z-index fix

--- a/Web/static/less/main.less
+++ b/Web/static/less/main.less
@@ -292,6 +292,7 @@ body {
     height: 800px;
     .flex_vertical();
     position: relative;
+    z-index: 5;
 }
 
 .detail-indicator {
